# UltrasoundROSTeleoperator

./: .gitignore
Assets/: InitializeRobot.cs  JointStatesSubscriber.cs
Assets/Resources/: ROSConnectionPrefab.prefab
Assets/Scenes/: SampleScene.unity
Assets/universal-robot-ur5/: ur5robot.urdf
Assets/universal-robot-ur5/Materials/: Grey.mat
Assets/universal-robot-ur5/meshes/ur5/collision/: Wrist1_1.asset  Wrist2_1.asset  Wrist3_1.asset
ProjectSettings/: ProjectSettings.asset
Unity/Assets/: TestQRCodeDetection.cs
Unity/Assets/universal-robot-ur5/meshes/ur5/collision/: Forearm_1.asset  Shoulder_1.asset  UpperArm_1.asset
ros2_ws/src/azure_kinect_body_tracking/: CMakeLists.txt  package.xml
ros2_ws/src/azure_kinect_body_tracking/launch/: kinect.rviz  kinect_launch.py
ros2_ws/src/azure_kinect_body_tracking/src/: body_tracking_node.cpp  joint_angle_node.cpp
ros2_ws/src/azure_kinect_ros_driver/: CMakeLists.txt
ros2_ws/src/azure_kinect_ros_driver/launch/: driver.launch.py
ros2_ws/src/azure_kinect_ros_driver/src/: k4a_ros_device.cpp
ros2_ws/src/ros2_trt_pose/: helper_closest.py  helper_working_2d_Depth.py
ros2_ws/src/ros2_trt_pose/docker/: Dockerfile  docker_run.sh
ros2_ws/src/ros2_trt_pose/pose_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/ros2_trt_pose/pose_msgs/msg/: PersonDetection.msg
ros2_ws/src/ros2_trt_pose/ros2_trt_pose/: package.xml
ros2_ws/src/ros2_trt_pose/ros2_trt_pose/launch/: pose-estimation.launch.py  pose_estimation_final.rviz
ros2_ws/src/ros2_trt_pose/ros2_trt_pose/ros2_trt_pose/: helper_3d_working.py  helper_backup.py
ros2_ws/src/ur-cb2-ros2-main/: README.md
ros2_ws/src/ur-cb2-ros2-main/UR/Universal_Robots_CB2_ROS2_Driver/ur_cb2_bringup/config/: ur_controllers.yaml
ros2_ws/src/ur-cb2-ros2-main/UR/Universal_Robots_CB2_ROS2_Driver/ur_cb2_bringup/launch/: ur_control.launch.py
ros2_ws/src/ur-cb2-ros2-main/UR/Universal_Robots_CB2_ROS2_Driver/ur_cb2_moveit_config/launch/: ur_moveit.launch.py
ros2_ws/src/ur-cb2-ros2-main/UR/Universal_Robots_CB2_ROS2_Driver/ur_cb2_moveit_config/rviz/: view_robot.rviz
ros2_ws/src/ur-cb2-ros2-main/UR/Universal_Robots_CB2_ROS2_Driver/ur_cb2_robot_driver/: CMakeLists.txt
ros2_ws/src/ur-cb2-ros2-main/UR/Universal_Robots_CB2_ROS2_Driver/ur_cb2_robot_driver/include/ur_cb2_robot_driver/: hardware_interface.hpp
ros2_ws/src/ur-cb2-ros2-main/UR/Universal_Robots_CB2_ROS2_Driver/ur_cb2_robot_driver/include/ur_cb2_robot_driver/ur/: RobotInterface.h  RobotServer.h
ros2_ws/src/ur-cb2-ros2-main/UR/Universal_Robots_CB2_ROS2_Driver/ur_cb2_robot_driver/src/: hardware_interface.cpp
ros2_ws/src/ur-cb2-ros2-main/UR/Universal_Robots_CB2_ROS2_Driver/ur_cb2_robot_driver/src/ur/: RobotInterface.cpp  RobotServer.cpp
ros2_ws/src/ur-cb2-ros2-main/UR/Universal_Robots_ROS2_Description/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/ur-cb2-ros2-main/UR/Universal_Robots_ROS2_Description/.github/workflows/: ci-ros-lint.yml
ros2_ws/src/ur-cb2-ros2-main/UR/Universal_Robots_ROS2_Description/config/ur10/: visual_parameters.yaml
ros2_ws/src/ur-cb2-ros2-main/UR/Universal_Robots_ROS2_Description/config/ur10e/: visual_parameters.yaml
ros2_ws/src/ur-cb2-ros2-main/UR/Universal_Robots_ROS2_Description/config/ur16e/: visual_parameters.yaml
ros2_ws/src/ur-cb2-ros2-main/UR/Universal_Robots_ROS2_Description/config/ur3/: visual_parameters.yaml
ros2_ws/src/ur-cb2-ros2-main/UR/Universal_Robots_ROS2_Description/config/ur3e/: visual_parameters.yaml
ros2_ws/src/ur-cb2-ros2-main/UR/Universal_Robots_ROS2_Description/config/ur5/: visual_parameters.yaml
ros2_ws/src/ur-cb2-ros2-main/UR/Universal_Robots_ROS2_Description/config/ur5e/: visual_parameters.yaml
ros2_ws/src/ur-cb2-ros2-main/UR/Universal_Robots_ROS2_Description/launch/: view_ur.launch.py
ros2_ws/src/ur-cb2-ros2-main/UR/Universal_Robots_ROS2_Description/test/: test_ur_urdf_xacro.py  test_view_ur_launch.py
ros2_ws/src/ur-cb2-ros2-main/UR/Universal_Robots_ROS2_Description/urdf/: ur.ros2_control.xacro  ur.urdf.xacro  ur_macro.xacro
ros2_ws/src/ur-cb2-ros2-main/cisst-saw/cisst_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/ur-cb2-ros2-main/cisst-saw/cisst_ros2_bridge/: CMakeLists.txt  package.xml
ros2_ws/src/ur-cb2-ros2-main/cisst-saw/cisst_ros2_bridge/example/: main.cpp
ros2_ws/src/ur-cb2-ros2-main/cisst-saw/cisst_ros2_bridge/include/cisst_ros2_bridge/: mtsCISSTToROS.h  mtsROSBridge.h  mtsROSToCISST.h
ros2_ws/src/ur-cb2-ros2-main/cisst-saw/cisst_ros2_bridge/src/: mtsCISSTToROS.cpp  mtsROSBridge.cpp  mtsROSToCISST.cpp
ros2_ws/src/ur-cb2-ros2-main/cisst-saw/cisst_ros2_crtk/: CMakeLists.txt  package.xml
ros2_ws/src/ur-cb2-ros2-main/cisst-saw/cisst_ros2_crtk/include/cisst_ros2_crtk/: cisst_ros_crtk.h  mtsCISSTToROS.h  mtsROSToCISST.h  mts_ros_crtk_bridge.h  mts_ros_crtk_bridge_provided.h  mts_ros_crtk_bridge_required.h
ros2_ws/src/ur-cb2-ros2-main/cisst-saw/cisst_ros2_crtk/src/: cisst_ros_crtk.cpp  mtsCISSTToROS.cpp  mtsROSToCISST.cpp  mts_ros_crtk_bridge_provided.cpp  mts_ros_crtk_bridge_required.cpp
ros2_ws/src/ur-cb2-ros2-main/crtk/crtk_msgs/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/ur5_control_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/ur5_control_cpp/src/: ur5_control_node.cpp
torch2trt/examples/: test_working.py
torch2trt/torch2trt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
trt_pose/tasks/human_pose/: live_demo.ipynb  test_torch.py
trt_pose/trt_pose/models/: common.py
