<?xml version="1.0"?>
<package format="3">
  <name>cisst_msgs</name>
  <version>1.0.0</version>
  <description>The cisst_msgs package</description>

  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <url type="website">https://github.com/jhu-cisst</url>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
