<?xml version="1.0"?>
<package format="3">
  <name>cisst_ros2_crtk</name>
  <version>2.0.0</version>
  <description>The cisst_ros2_crtk package</description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <author email="anton.deguet@jhu.edu">Anton Deguet</author>
  <license>CISST</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cisst_ros2_bridge</depend>
  <depend>crtk_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
